--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>缘梦之旅</title>
-	<link rel="icon" href="images/logo.png">
+	<link rel="icon" href="/seven/images/logo.png">
 	<style >
 	*{
 		padding: 0;
@@ -123,7 +123,7 @@
 <body>                                                        
 	<div id="container">
 		<div id="header">
-			<img src="images/logo.png" alt="none">
+			<img src="/seven/images/logo.png" alt="none">
 			<h2>缘梦之旅</h2>
 			<ul id="nav">
 			    <li><a href="#1">注册/登陆</a></li>
@@ -144,16 +144,16 @@
 		</div>
 		<div id="content">
 			<div id="pic1">
-				<img src="images/study-group.jpg" alt="none ">
+				<img src="/seven/images/study-group.jpg" alt="none ">
 			</div>
 			<div id="pic2">
-				<img src="images/daka.png" alt="none">
+				<img src="/seven/images/daka.png" alt="none">
 			</div>
 			<div id="pic3">
-				<img src="images/jingsai.png" alt="none">
+				<img src="/seven/images/jingsai.png" alt="none">
 			</div>
 			<div id="pic4">
-				<img src="images/pinche.png" alt="none">
+				<img src="/seven/images/pinche.png" alt="none">
 			</div>
 		</div>
 	</div>
